--- a/views/listing/new.ejs
+++ b/views/listing/new.ejs
@@ -1,7 +1,7 @@
 <% layout("/layout/boilerplate.ejs") %>
 <div class="row">
   <div class="col-8 offset-2">
-    <form action="/listing" method="post">
+    <form action="/listing" method="post" novalidate class="needs-validation">
       <h3>Create your new list</h3>
       <div class="mb-3">
         <label for="title" class="form-lable">Title</label>
@@ -10,6 +10,7 @@
           type="text"
           placeholder="Enter a catchy title"
           class="form-control"
+          required
         />
       </div>
       <div class="mb-3">
@@ -20,6 +21,7 @@
           rows="5"
           placeholder="Enter description"
           class="form-control"
+          required
         ></textarea>
       </div>
       <div class="mb-3">
@@ -48,6 +50,7 @@
             type="text"
             placeholder="enter location"
             class="form-control"
+            required
           />
         </div>
       </div>
@@ -58,6 +61,7 @@
           type="text"
           placeholder="enter country"
           class="form-control"
+          required
         />
       </div>
       <br>
